RESOLVED FIXED218245
[GStreamer] Using audio files for the <img> tag triggers warnings
https://bugs.webkit.org/show_bug.cgi?id=218245
Summary [GStreamer] Using audio files for the <img> tag triggers warnings
Philippe Normand
Reported 2020-10-27 10:36:13 PDT
** (WebKitWebProcess:67): WARNING **: 10:23:50.597: Error: 1, Internal data stream error.. Debug output: ../gst-libs/gst/tag/gsttagdemux.c(1512): gst_tag_demux_element_loop (): /GstPipeline:image-decoder-2/GstDe codeBin:decodebin2/GstID3Demux:id3demux2: streaming stopped, reason not-linked (-1) ** (WebKitWebProcess:67): WARNING **: 10:23:50.599: Error: 12, Your GStreamer installation is missing a plug-in.. Debug output: ../gst/playback/gstdecodebin2.c(4719): gst_decode_bin_expose (): /GstPipeline:image -decoder-3/GstDecodeBin:decodebin3: no suitable plugins found: Missing decoder: MPEG-1 Layer 3 (MP3) (audio/mpeg, mpegversion=(int)1, layer=(int)3, parsed=(boolean)false)
Attachments
Patch (2.84 KB, patch)
2020-10-27 10:40 PDT, Philippe Normand
calvaris: review+
Philippe Normand
Comment 1 2020-10-27 10:40:52 PDT
Adrian Perez
Comment 2 2020-10-27 12:31:21 PDT
Comment on attachment 412443 [details] Patch I've tested a build with this patch and works here. The patch looks reasonable on my eyes, but you may want a formal review by someone who knows better the GStreamer multimedia code :)
Philippe Normand
Comment 3 2020-10-28 05:47:56 PDT
Radar WebKit Bug Importer
Comment 4 2020-10-28 05:48:21 PDT
Note You need to log in before you can comment on or make changes to this bug.