[GStreamer] Using audio files for the <img> tag triggers warnings https://bugs.webkit.org/show_bug.cgi?id=218245

Reviewed by Xabier Rodriguez-Calvar.

Plug non-video pads to a fake sink in order to maintain a valid pipeline. Later we should
switch to decodebin3 and rely on the stream selection facilities.

* platform/graphics/gstreamer/ImageDecoderGStreamer.cpp:
(WebCore::ImageDecoderGStreamer::InnerDecoder::connectDecoderPad):
(WebCore::ImageDecoderGStreamer::InnerDecoder::preparePipeline):

Canonical link: https://commits.webkit.org/230980@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@269099 268f45cc-cd09-0410-ab3c-d52691b4dbfc